✨ categories response
